# Hippo-encoder

./: Hippo_Encoder_Colab.ipynb  Hippo_Encoder_H100_Upgrade_Colab.ipynb  Hippo_Encoder_Improvement_Colab.ipynb  README.md  pyproject.toml
benchmarks/: sample_region_cases.json  semantic_eval_suite.json
configs/: distill_clip_tiny.json  tiny_llm_pair_reset.json  tiny_llm_reset.json
models/hippoencoder-bge-small-all-nli-pair-500k-c025-epoch3/: README.md  manifest.json
models/hippoencoder-bge-small-all-nli-pair-500k-c025-epoch3/chunks/: chunks.json
prompts/: ranged_formula_region_prompt.md
scripts/: benchmark_direct_delta_region.py  benchmark_formula_region.py  benchmark_generate_formula_region.py  benchmark_group_region.py  benchmark_hippo5_go_softbox.py  benchmark_hippo5_softbox_retrieval.py  benchmark_locomo_hippo5_retrieval.py  benchmark_prompt_dense_delta.py  benchmark_region_membership.py  benchmark_region_program_size.py  benchmark_rope_region.py  benchmark_student_formula_region.py  eval_student_encoder.py  prepare_pair_dataset.py  prepare_region_cases.py  prepare_text_dataset.py  reassemble_model_artifact.py  split_model_artifact.py  train_prompt_dense_delta.py  train_student_formula_behavior.py  train_student_formula_head.py  verify_model_artifact.py
src/hippo_encoder/: __init__.py  config.py  data.py  formula_region.py  group_region.py  losses.py  region.py  rope_region.py  student.py  teacher.py  train.py
